--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "element-ui": "^2.15.14",
+    "material-kit": "^2.0.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
